Service Regression/tests/00DM0000001eO1fMAE/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ATC_Current_Billing__c</fullName>
        <label>ATC Current Billing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Product_Id__c</fullName>
        <externalId>true</externalId>
        <label>BU Product Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Product__c</fullName>
        <formula>TEXT(Product_BU__c)&amp;&quot;-&quot;&amp; Name</formula>
        <inlineHelpText>formula field that combines the product BU and Product Name</inlineHelpText>
        <label>BU Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_of_Business__c</fullName>
        <label>Book of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEAL BUILDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Of Bob - Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyscraper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>DSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Product_No_Cost_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want the price of the child product to be full list price</inlineHelpText>
        <label>Child Product No Cost Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>field to match product master for company values</description>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC/KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>***ADMIN ONLY*** 

Cost Factor for packages. Should default to 1.</description>
        <label>Cost Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpPaidbyDealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExpPaidbyDealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Format_Coop__c</fullName>
        <label>Format Coop</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freight_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Cost to ship product</inlineHelpText>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a hardware product</inlineHelpText>
        <label>Hardware Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haystak Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPackageParent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>related to VinSolutions products</inlineHelpText>
        <label>IsPackageParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPackage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTraining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTraining</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Group__c</fullName>
        <label>Package Group</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nickel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist auto posting tool-MotoBlast*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - limited users, up to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Plus Limited User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM upgrade limited users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Sales Event - 10,000*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Sales Event - 2,500*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Sales Event - 5,000*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Sales Event - 7,500*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integration - Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integration - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking ala carte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking module package upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Complete Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Facebook widgets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing SEM Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing SMM Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fullfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Advanced 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Advanced 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Lite 1</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phased_Implementation_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phased Implementation Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProdProj_Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>look up user that the Project Piece will be assigned to</inlineHelpText>
        <label>ProdProj Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_BU__c</fullName>
        <label>Product BU</label>
        <picklist>
            <picklistValues>
                <fullName>ATC Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMercardo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homenet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Listings Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyscraper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Level__c</fullName>
        <label>Product Level</label>
        <picklist>
            <picklistValues>
                <fullName>Accelerate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobiography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMercardo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Center KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Model Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Model Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Segment__c</fullName>
        <label>Product Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New/Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <picklist>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_channel__c</fullName>
        <label>Product channel</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <label>Production Department</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Issue__c</fullName>
        <label>Production Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantity Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiresWelcomePacket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RequiresWelcomePacket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIM_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIM Product</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ATC_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_BU__c</field>
            <operation>equals</operation>
            <value>ATC</value>
        </filters>
        <label>ATC Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>Product_BU__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>AllProductsFrankie</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>BU_Product_Id__c</columns>
        <columns>Book_of_Business__c</columns>
        <columns>Format_Coop__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Level__c</columns>
        <columns>Product_Segment__c</columns>
        <columns>Product_Version__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products Frankie</label>
    </listViews>
    <listViews>
        <fullName>Product_BU</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Product_BU__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product BU</label>
    </listViews>
    <listViews>
        <fullName>TIM_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>equals</operation>
            <value>TIM</value>
        </filters>
        <label>TIM Products</label>
    </listViews>
</CustomObject>